# open-api-template

./: .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml
README/: README.md
README/dev/: folder-architecture.md  linting-and-formatting.md  monitoring.md  testing.md
README/devops/: CI.md  cloud-run-deploy.md
devops/: entrypoint.sh
src/: .coveragerc  pyproject.toml
src/apps/example/: api.py  models.py  schema.py
src/apps/example/migrations/: 0001_initial.py
src/apps/example/tests/: factories.py  test_example.py
src/conf/: api.py  settings.py  urls.py
